# dishes_menu-api

./: .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
app/: app_settings.py  database.py  main.py
app/models/: __init__.py  base_class.py  dishes.py  menu.py  sub_menu.py
